style.css
/* ... */
header.entry-header h2 {
	font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
	color: black;
}

.elementor-element.elementor-element-425b329.elementor-widget.elementor-widget-text-editor p, .textwidget p, .textwidget li {
	font-family: 'Public Sans', Arial, sans-serif;
	text-align: left;
	font-weight: lighter;
}

.wp-block-cover__inner-container p, .textStyle a, .text-content.group.wrapper p, .text-content.group.wrapper li {
	font-family: 'Public Sans', Arial, sans-serif;
	font-weight: lighter;
}

header.page-header.pad-container h1 {
	font-size: larger;
}

.menu-odhmain-container {
	padding-left: 8rem;
	background-color: white;
	box-shadow: 0 0 8px rgba(0,0,0,.2);
}

form.searchform:hover {
	color: black;
}

div#site-header-main div {
	margin: 0;
	max-width: 100%;
}

.menu-mobile-humanities-container {
	display: flex;
	justify-content: center;
	padding-top: 1rem;
}

ul#menu-mobile-humanities.menu > li > a {
	color: white;
}

ul#menu-mobile-humanities.menu > li > a:hover {
	color: #8F8F8F;
}

a.continue-reading-link {
	display: none;
}

aside#colophon a.fa {
	font-family: 'FontAwesome';
	margin: 0.2em;
}

.college-news-heading h2 {
	text-align: center;
	font-family: "HCo Ringside Narrow SSm", "Open Sans", Helvetica, Arial, sans-serif;
}

/***********************/
/*  ABOUT THE COLLEGE  */
/***********************/

img.alignnone.wp-image-627.size-full {
	float: right;
	width: 35%;
	margin: 0.5em;
}

h6.caps {
	display: inline;
	font-size: 1.7em;
}

div#content .main p {
	margin-top: 0.7em;
	font-family: 'Public Sans', Arial, sans-serif;
}

i.icon.byu-icon-arrow-long, i.icon.byu-icon-news {
	display: none;
}

.entry-content h2 {
	font-size: x-large;
	margin-top: 2.7em;
}

/***********************/
/* FOOTER SOCIAL ICONS */
/***********************/

aside#colophon .fa-instagram {
	color: #c32aa3;
}

aside#colophon .fa-facebook {
	color: #3b5998;
}

aside#colophon .fa-twitter {
	color: #1da1f2;
}

aside#colophon .fa-youtube {
	color: #c4302b;
}
/******************************/
/* Style for testing lab page */
/******************************/

.button {
        background-color: white;
        border: 2px solid #0057b8;
        color: black;
        padding: 10px 30px;
        border-radius: 4px;
        text-align: center;
        text-decoration: none;
        display: inline-block;
        font-size: 14px;
        transition-duration: 0.4s;
        cursor: pointer;
      }
.button:hover {
        background-color: #0057b8;
        color: white !important;
}
/***********************/
/*End of custom testing page css*/
/***********************/

/**********/
/*Styles for grid content*/
/**********/ 
.odhBoxContentGrid{  
    position: relative;
    display: grid;
    grid-template-columns: 1fr repeat(12, minmax(auto, 60px)) 1fr;
    grid-gap: 40px;
    padding: 60px 0;
}
.odhBoxCards{
    /*column and row width/height to be set here*/
    grid-column: 2 / span 12;
    display: grid;
    grid-template-columns: repeat(12, minmax(auto, 60px));
    grid-gap: 40px; 
}
.archivedStatus{
	border:5px solid #8f8f8f;
}
.liveStatus{
	border:5px solid #10A170;
}
.intakeStatus{
	border:5px solid #FFED74;
}
.odhBoxSingleCard{
    /*single card content here*/
    grid-column-end: span 4;
    display: flex;
    flex-direction: column;
    background-color: white;
    box-shadow: 8px 12px 18px #969595c2;
    cursor: pointer;
}
.odhBoxSingleCard:hover{
    background-color:rgba(0, 0, 0, .05);
}
.odhCardImgContainer{ /*styles for cards with images*/
    width: 100%;
    padding-top: 56.25%; /*aspect ratio of 16x9*/
    overflow: hidden;
    position: relative;
}
.odhCardImgContainer img{
    width: 100%;
    position: absolute;
    top: 50%;
    left: 50%; /*helps position images with diff ratio size*/
    transform: translate(-50%, -50%);
}
.odhBoxInner{
    padding: 20px;
    text-align: center;
    text-decoration: none;
    font-size: 14px;
}
h3.odhFirstTitle{
    margin-bottom: 20px;
}
#odhBoxTitle{
    color: #141414;
    font-size: 19px;
}
#odhBoxDescription{
	color: #141414;
	display: block;
    display: -webkit-box;
    font-size: 14px;
    line-height: 1.4;
    height: 58.8; /* line-height * font-size * num-lines */
    -webkit-line-clamp: 3; /* num-lines */
    -webkit-box-orient: vertical;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 100%;
}
.odhBoxInfo{
    display: flex;
    align-self: flex-end;
    align-items: center;
}
@media only screen  and (max-width: 100px){
    .odhBoxSingleCard{
        grid-column-end: span 6;
    }
}
@media only screen  and (max-width: 700px){
    .odhBoxContentGrid{
        grid-gap: 20px;
    }
    .odhBoxSingleCard{
        grid-column-end: span 12;
    }
}
@media only screen  and (max-width: 500px){
    .odhBoxContentGrid{
        grid-template-columns: 10px repeat(6, 1fr) 10px;
        grid-gap: 10px;
    }
    .odhBoxCards{
        grid-column: 2 / span 6;
        grid-template-columns: repeat(6, 1fr);
        grid-gap: 20px;
    }
    .odhBoxSingleCard{
        grid-column-end: span 6;
    }
}
/*********/
/*End of grid styles*/
/********/

/*********/
/*styles for the custom projects page*/
/*********/
.projectMainContODH{
	position: relative;
}
h2.projectMainContODH{
	text-align: center;
}
.projectHeroODH{
	position: relative;
	background-color: #e6e6e6;
	width: 100%;
}
.projectHeroIMG{
	position: relative;
	width: 400px;
	padding: 10px;
}
.projectMidContODH{
	position: relative;
	padding: 20px;
}
.projectDescriptionCont{
	position: absolute;
	width: 500px;
}
.projectDetailsCont{
	position: absolute;
	left: 50%;
}
.projectPersonnel{
	position: relative;
}
.projectSnapshotsODH{
	position: relative;
}
.projectSnapshotsIMG{
	position: absolute;
	padding: 20px;
}
/*END of Project Styles*/
/* END OF SUBMENUS */

/* change link colors on faculty & staff commons */
div#content .elementor-text-editor a {
	color: #0062B8;
}
/* ... */

